# dark-matter

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  install-dependencies.sh  mypy.ini  noxfile.py  pyproject.toml  requirements-2.txt  requirements-3.txt  requirements-dev.txt  requirements-ipynb.txt  requirements-pypy.txt  requirements.txt  requirements2.txt  setup.py  tox.ini
.github/workflows/: nox.yml  ruff.yml  test-PR.yml
dark/: Makefile  __init__.py  aa.py  aaVars.py  aligners.py  alignment.py  alignments.py  analyze_reads.py  baseimage.py  blast.py  bowtie2.py  btop.py  cigar.py  codonDistance.py  codonTable.py  colors.py  colours.py  consensus.py  conversion.py  database.py  dimension.py  distance.py  dna.py  entrez.py  errors.py  fasta.py  fasta_ss.py  fastamanipulations.py  fastq.py  features.py  filter.py  fpcache.py  genbank.py  genomes.py  gor4.py  graphics.py  hits.py  hsp.py  html.py  intervals.py  (+28 more)
dark/blast/: alignments.py  blast.py  conversion.py  hacks.py  hits.py  hsp.py  params.py  records.py  score.py
dark/civ/: graphics.py  html.py  proteins.py
dark/data/gor4/: README.md
dark/diamond/: alignments.py  conversion.py  hacks.py  hsp.py  records.py  run.py  sam.py
dark/gor4_src/: cgor4.pxd  trivial_test.py
dark/sam/: alignments.py  conversion.py  explain_sam_flags.py  hacks.py
dark/test/: test_analyze_reads.py  test_dimension.py  test_fasta.py  test_summarize.py  test_utils.py
doc/: linux.md  mac.md  protein-database.md  taxonomy.md  translation.md  usage.md  windows.md
gor_iv/: Makefile  api.c  cgor_iv.pxd  gor.c  gor.h  gor4.pyx  gor_iv.c  gor_iv.pyx  lib.c  setup.py  trivial_test.py
misc/: Makefile-protein-database
src/dark/: __init__.py  aa.py  aaVars.py  aligners.py  alignments.py  analyze_reads.py  bowtie2.py  btop.py  cigar.py  codonDistance.py  colors.py  consensus.py  database.py  dimension.py  dna.py  entrez.py  errors.py  extract_reference.py  fasta.py  fasta_ss.py  fastq.py  features.py  filter.py  fpcache.py  genbank.py  genomes.py  graphics.py  html.py  idutils.py  intervals.py  ipynb.py  mutations.py  ncbidb.py  process.py  progress.py  proteins.py  reads.py  sam.py  score.py  sequence.py  (+7 more)
src/dark/blast/: alignments.py  conversion.py  hacks.py  params.py  score.py
src/dark/civ/: graphics.py  html.py  proteins.py
src/dark/diamond/: alignments.py  conversion.py  run.py  sam.py
src/gor4/: README.md  api.c  build.py  defines.h  gor4-base.c  gor4-base.h  gor4.pyx  nrutil.c  nrutil.h  trivial_test.py
test/: bam.py  mocking.py  test_aa.py  test_aligners.py  test_alignment.py  test_alignments.py  test_analyze_reads.py  test_blast.py  test_bowtie2.py  test_btop.py  test_bwa_index_to_fasta.py  test_cigar.py  test_codonDistance.py  test_colors.py  test_consensus.py  test_conversion.py  test_coverage_depth.py  test_dimension.py  test_distance.py  test_dna.py  test_fasta.py  test_fasta_diff.py  test_fasta_ss.py  test_fastamanipulations.py  test_fastq.py  test_features.py  test_filter.py  test_genbank.py  test_genomes.py  test_gor4.py  test_graphics.py  test_hits.py  test_hsp.py  test_html.py  test_idutils.py  test_intervals.py  test_local_align.py  test_mutations.py  test_nicola.py  test_orfs.py  (+17 more)
test/blast/: sample_data.py  test_alignments.py  test_blast.py  test_conversion.py  test_hits.py  test_hsp.py  test_score.py  test_titles.py
test/civ/: test_proteins.py
test/data/hbv/: Makefile  hbv-proteins.db  query1.bam  query1.bam.bai  query2.bam  query2.bam.bai  query3.bam  query3.bam.bai
test/diamond/: sample_data.py  sample_proteins.py  test_alignments.py  test_conversion.py  test_hsp.py  test_run.py  test_sam.py  test_titles.py
test/sam/: sample_data.sam  sample_data_1.sam  sample_data_params.sam  test_alignments.py
