[project]
name = "dark-matter"
version = "7.0.10"
description = "Python library and utility scripts for working with genetic sequence data."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    {name = "Terry Jones", email = "tcj25@cam.ac.uk"},
    {name = "Barbara Mühlemann"},
    {name = "Tali Veith"},
    {name = "Sophie Mathias"},
    {name = "Udo Gieraths"},
    {name = "Nikolai Zaki"},
    {name = "David Pattinson"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "biopython>=1.83",
    "bz2file>=0.98",
    "cachetools>=5.5.2",
    "Cython>=0.29.16",
    "dendropy>=5.0.1",
    "edlib>=1.3.9.post1",
    "ete4>=4.4.0",
    "ipython>=8.12.3",
    "matplotlib>=3.7.5",
    "mysql-connector-python>=9.0.0",
    "numpy>=1.14.2",
    "progressbar>=2.5",
    "prseq>=0.0.33",
    "pysam>=0.23.0",
    "pyzmq>=14.3.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scikit-learn>=1.3.2",
    "simplejson>=3.5.3",
    "summarize-ranges>=0.1.1",
    "types-cachetools>=5.5.0",
    "types-requests>=2.32.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["src"], include = ["dark*"]}}
data-files = {"bin" = ["bin/*"]}

[tool.ruff]
line-length = 88

lint.select = ["E", "F", "W", "I"]

exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".venv",
]

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "pytest>=8.3.5",
    "ruff>=0.13.3",
]

[project.urls]
Homepage = "https://github.com/acorg/dark-matter"
"Bug Tracker" = "https://github.com/acorg/dark-matter/issues"

[tool.basedpyright]
  include = [
    "src",
    "bin",
    "test",
  ]
  exclude = [
    "**/__pycache__",
    ".venv",
  ]
  ignore = []
  reportAny = false
  reportImplicitStringConcatenation = false
  reportUnusedCallResult = false
  reportExplicitAny = false

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
